Remove Bootstrap stuff and use jQuery UI

--- a/index.html
+++ b/index.html
@@ -6,14 +6,34 @@ authors:
   - Phil Windley
 published: true
 ---
-  <div class="container">
-  <div class="row">
-    <div class="page-titles">
-     <h1 style="margin-bottom:-20px; margin-top: 40px" class="text-center">Fuse</h1>
-    </div>
 
-  </div>	 <!-- /row -->
+<div data-role="page" id="page-main" data-title="Pico Labs Main" data-close-btn="none">
 
-</div>	 <!-- /container -->
+   <div data-role="header" style="text-align:center;">
+     <!-- <div class="header-image"> -->
+     <!--    <img class="fuse-logo" src="https://s3.amazonaws.com/Fuse_assets/img/fuse_logo-40.png"> -->
+     <!-- </div> -->
+
+     <!-- <div data-role="collapsible" id="help-menu" data-mini="true" class="rightMenu" data-collapsed-icon="info" data-expanded-icon="info"> -->
+     <!--   <h3>Fuse Help</h3> -->
+     <!--   <ul data-role="listview" > -->
+     <!--        <li data-icon="false"><a href="/app_help.html" target="_blank">Get Started</a></li> -->
+     <!--        <li data-icon="false"><a href="/faq.html#using" target="_blank">FAQ</a></li> -->
+     <!--   </ul> -->
+     <!-- </div> -->
+
+
+   </div><!-- /header -->
+
+   <div data-role="content" >
+    <h1 style="text-align:center; font-size: 150%">Pico Labs</h1>
+   </div><!-- /content -->
+
+   <div data-role="footer" data-position="fixed">
+      <h4>Pico Labs</h4>
+   </div><!-- /footer -->
+</div><!-- /page -->
+
+
 
 
