--- a/index.html
+++ b/index.html
@@ -7,33 +7,47 @@ authors:
 published: true
 ---
 
-<div data-role="page" id="page-main" data-title="Pico Labs Main" data-close-btn="none">
 
-   <div data-role="header" style="text-align:center;">
-     <!-- <div class="header-image"> -->
-     <!--    <img class="fuse-logo" src="https://s3.amazonaws.com/Fuse_assets/img/fuse_logo-40.png"> -->
-     <!-- </div> -->
+<div class="site-wrapper">
 
-     <!-- <div data-role="collapsible" id="help-menu" data-mini="true" class="rightMenu" data-collapsed-icon="info" data-expanded-icon="info"> -->
-     <!--   <h3>Fuse Help</h3> -->
-     <!--   <ul data-role="listview" > -->
-     <!--        <li data-icon="false"><a href="/app_help.html" target="_blank">Get Started</a></li> -->
-     <!--        <li data-icon="false"><a href="/faq.html#using" target="_blank">FAQ</a></li> -->
-     <!--   </ul> -->
-     <!-- </div> -->
+      <div class="site-wrapper-inner">
 
+        <div class="cover-container">
 
-   </div><!-- /header -->
+          <!-- <div class="masthead clearfix"> -->
+          <!--   <div class="inner"> -->
+          <!--     <h3 class="masthead-brand">Cover</h3> -->
+          <!--     <nav> -->
+          <!--       <ul class="nav masthead-nav"> -->
+          <!--         <li class="active"><a href="#">Home</a></li> -->
+          <!--         <li><a href="#">Features</a></li> -->
+          <!--         <li><a href="#">Contact</a></li> -->
+          <!--       </ul> -->
+          <!--     </nav> -->
+          <!--   </div> -->
+          <!-- </div> -->
 
-   <div data-role="content" >
-    <h1 style="text-align:center; font-size: 150%">Pico Labs</h1>
-   </div><!-- /content -->
+          <div class="inner cover">
+<h1 class="cover-heading">Pico Labs</h1>
+<p class="lead">
+Pico Labs is future home of lots of information about picos. 
+</p>
+<p class="lead">
+<a href="http://www.windley.com/" class="btn btn-lg btn-default">Learn more</a>
+</p>
+          </div>
 
-   <div data-role="footer" data-position="fixed">
-      <h4>Pico Labs</h4>
-   </div><!-- /footer -->
-</div><!-- /page -->
+          <div class="mastfoot">
+            <div class="inner">
+              <p>@copy; Copyright PJW LC, 2014</p>
+            </div>
+          </div>
 
+        </div>
+
+      </div>
+
+    </div>
 
 
 
