Make the entity ref right

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Pico Labs is future home of lots of information about picos.
 
           <div class="mastfoot">
             <div class="inner">
-              <p>@copy; Copyright PJW LC, 2014</p>
+              <p>&copy; Copyright PJW LC, 2014</p>
             </div>
           </div>
 
