articles are important

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ published: true
           <div class="inner cover">
 <h1 class="cover-heading">Pico Labs</h1>
 <p class="lead">
-Pico Labs is future home of lots of information about picos. 
+Pico Labs is the future home of lots of information about picos. 
 </p>
 <p class="lead">
 <a href="http://www.windley.com/" class="btn btn-lg btn-default">Learn more</a>
