Add github link

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@ published: true
 
         <div class="cover-container">
 
-          <!-- <div class="masthead clearfix"> -->
-          <!--   <div class="inner"> -->
-          <!--     <h3 class="masthead-brand">Cover</h3> -->
-          <!--     <nav> -->
-          <!--       <ul class="nav masthead-nav"> -->
-          <!--         <li class="active"><a href="#">Home</a></li> -->
-          <!--         <li><a href="#">Features</a></li> -->
-          <!--         <li><a href="#">Contact</a></li> -->
-          <!--       </ul> -->
-          <!--     </nav> -->
-          <!--   </div> -->
-          <!-- </div> -->
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">Cover</h3>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="https://github.com/Picolab/">Github</a></li>
+                  <!-- <li><a href="#">Contact</a></li> -->
+                </ul>
+              </nav>
+            </div>
+          </div>
 
           <div class="inner cover">
 <h1 class="cover-heading">Pico Labs</h1>
