Remove gratuitous branding

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ published: true
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
+              <!-- <h3 class="masthead-brand">Pico Labs</h3> -->
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
