fix the broken link on the homepage of picolabs.io

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ published: true
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li class="active"><a href="http://devtools.picolab.io">Developer Tools</a></li>
+                  <li class="active"><a href="http://devtools.picolabs.io">Developer Tools</a></li>
                   <li><a href="https://github.com/Picolab/">Github</a></li>
                   <!-- <li><a href="#">Contact</a></li> -->
                 </ul>
