--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ published: true
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li ><a href="http://developer.picolabs.io">Documentation</a></li>
+                  <li ><a href="https://picolabs.atlassian.net/">Documentation</a></li>
+                  <li ><a href="http://forum.picolabs.io/">Forums</a></li>
                   <li ><a href="http://devtools.picolabs.io">Developer Tools</a></li>
                   <li><a href="https://github.com/Picolab/">Github</a></li>
                   <!-- <li><a href="#">Contact</a></li> -->
