--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Pico Labs is reponsible for picos, an actor-based programming system that suppor
 
           <div class="mastfoot">
             <div class="inner">
-              <p>&copy; Copyright PJW LC, 2015</p>
+              <p>&copy; Copyright Pico Labs, 2015-2016</p>
             </div>
           </div>
 
