--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ published: true
                   <li ><a href="https://picolabs.atlassian.net/">Documentation</a></li>
                   <li ><a href="http://forum.picolabs.io/">Forums</a></li>
                   <li ><a href="https://picolabs.atlassian.net/wiki/display/docs/Pico+Engine+Quickstart">Get Started</a></li>
-                  <li><a href="https://github.com/Picolab/">Github</a></li>
+                  <li><a href="https://github.com/Picolab/">GitHub</a></li>
                   <!-- <li><a href="#">Contact</a></li> -->
                 </ul>
               </nav>
