--- a/openwest/index.html
+++ b/openwest/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>OpenWest 2018</title>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/png" href="/img/pico-logo-transparent-48x48.png">
   </head>
   <body>
   </body>
