--- a/openwest/index.html
+++ b/openwest/index.html
@@ -4,7 +4,53 @@
     <title>OpenWest 2018</title>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="/img/pico-logo-transparent-48x48.png">
+    <link rel="stylesheet" href="https://use.typekit.net/miv2swc.css">
+<style type="text/css">
+body, html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+body {
+  margin-left: 10px;
+  background-color: #2DA2D9;
+  background-image: linear-gradient(#2DA2D9, white);
+}
+h1 {
+  color: white;
+  text-transform: uppercase;
+  font-family: rift;
+  font-weight: 300;
+  font-size: 3em;
+  letter-spacing: 0.1em;
+  margin: 0;
+}
+h2 {
+  font-family: chantal,sans-serif;
+  font-size: 2em;
+  margin: 0;
+}
+div#logo {
+  position: absolute;
+  bottom: 0;
+  left: 15px;
+}
+p a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: rift;
+  font-weight: 500;
+}
+    </style>
   </head>
   <body>
+    <h1>Manifold Connection Collection</h1>
+    <div id="logo">
+      <img src="/img/pico-logo-transparent-48x48.png" alt="Pico Labs logo">
+      <p style="margin:0;font-family:sans-serif">
+        <span style="color:#2DA2D9;margin-left:-10px">Pico Labs</span>
+        <a href="http://picolabs.io"> http://picolabs.io/</a>
+      </p>
+    </div>
   </body>
 </html>
