--- a/openwest/index.html
+++ b/openwest/index.html
@@ -35,7 +35,7 @@ div#logo {
   bottom: 0;
   left: 15px;
 }
-p a {
+#logo p a {
   text-decoration: none;
   text-transform: uppercase;
   font-family: rift;
@@ -45,6 +45,7 @@ p a {
   </head>
   <body>
     <h1>Manifold Connection Collection</h1>
+    <h2>Contact. Connect. Collect!</h2>
     <div id="logo">
       <img src="/img/pico-logo-transparent-48x48.png" alt="Pico Labs logo">
       <p style="margin:0;font-family:sans-serif">
