initial game instructions

--- a/openwest/index.html
+++ b/openwest/index.html
@@ -46,6 +46,13 @@ div#logo {
   <body>
     <h1>Manifold Connection Collection</h1>
     <h2>Contact. Connect. Collect!</h2>
+    <p>Game hosted by Pico Labs during the first two days of OpenWest 2018.</p>
+    <h3>How to play</h3>
+    <ol>
+      <li>Register at the Pico Labs booth</li>
+      <li>Invite another to scan your assigned QR Code®</li>
+      <li>You and the other person now have a connection</li>
+    </ol>
     <div id="logo">
       <img src="/img/pico-logo-transparent-48x48.png" alt="Pico Labs logo">
       <p style="margin:0;font-family:sans-serif">
