use sans serif font

--- a/openwest/index.html
+++ b/openwest/index.html
@@ -15,11 +15,12 @@ body {
   margin-left: 10px;
   background-color: #2DA2D9;
   background-image: linear-gradient(#2DA2D9, white);
+  font-family: Arial, sans-serif;
 }
 h1 {
   color: white;
   text-transform: uppercase;
-  font-family: rift;
+  font-family: rift, sans-serif;
   font-weight: 300;
   font-size: 3em;
   letter-spacing: 0.1em;
@@ -38,7 +39,7 @@ div#logo {
 #logo p a {
   text-decoration: none;
   text-transform: uppercase;
-  font-family: rift;
+  font-family: rift, sans-serif;
   font-weight: 500;
 }
     </style>
