note registered trademark

--- a/openwest/index.html
+++ b/openwest/index.html
@@ -54,12 +54,15 @@ div#logo {
       <li>Invite another to scan your assigned QR Code®</li>
       <li>You and the other person now have a connection</li>
     </ol>
-    <div id="logo">
+    <div id="logo" style="z-index:2">
       <img src="/img/pico-logo-transparent-48x48.png" alt="Pico Labs logo">
       <p style="margin:0;font-family:sans-serif">
         <span style="color:#2DA2D9;margin-left:-10px">Pico Labs</span>
         <a href="http://picolabs.io"> http://picolabs.io/</a>
       </p>
+    </div>
+    <div style="position:absolute;bottom:0;right:0">
+      "QR Code" is a registered trademark of Denso Corporation
     </div>
   </body>
 </html>
