--- a/openwest/index.html
+++ b/openwest/index.html
@@ -47,12 +47,16 @@ div#logo {
   <body>
     <h1>Manifold Connection Collection</h1>
     <h2>Contact. Connect. Collect!</h2>
+    <h3>What is it</h3>
     <p>Game hosted by Pico Labs during the first two days of OpenWest 2018.</p>
+    <h3>Prizes</h3>
+    
     <h3>How to play</h3>
     <ol>
       <li>Register at the Pico Labs booth</li>
       <li>Invite another to scan your assigned QR Code®</li>
       <li>You and the other person now have a connection</li>
+      <li>Most connections at the end of the day wins</li>
     </ol>
     <div id="logo" style="z-index:2">
       <img src="/img/pico-logo-transparent-48x48.png" alt="Pico Labs logo">
