initial privacy policy

--- a/openwest/index.html
+++ b/openwest/index.html
@@ -58,6 +58,13 @@ div#logo {
       <li>You and the other person now have a connection</li>
       <li>Most connections at the end of the day wins</li>
     </ol>
+    <h3>Privacy Policy</h3>
+    <ol>
+      <li>Your device must accept a cookie from picos.byu.edu</li>
+      <li>You must identify yourself for game purposes with initials or short name and a tag line</li>
+      <li>You may choose to enter additional information made available to your connections</li>
+    </ol>
+    
     <div id="logo" style="z-index:2">
       <img src="/img/pico-logo-transparent-48x48.png" alt="Pico Labs logo">
       <p style="margin:0;font-family:sans-serif">
