--- a/openwest/index.html
+++ b/openwest/index.html
@@ -12,10 +12,11 @@ body, html {
   margin: 0;
 }
 body {
-  margin-left: 10px;
+  margin: auto;
   background-color: #2DA2D9;
   background-image: linear-gradient(#2DA2D9, white);
   font-family: Arial, sans-serif;
+  text-align: center;
 }
 h1 {
   color: white;
