--- a/openwest/index.html
+++ b/openwest/index.html
@@ -32,6 +32,11 @@ h2 {
   font-size: 2em;
   margin: 0;
 }
+ol {
+  margin: auto;
+  text-align: left;
+  width: fit-content;
+}
 div#logo {
   position: absolute;
   bottom: 0;
