inserted link to documentation page

--- a/namename/index.html
+++ b/namename/index.html
@@ -106,7 +106,7 @@ form { margin-bottom: 1em; }
     send_directive("<span class="name15" title="directive name">name</span>",{"<span class="name16" title="directive options map key">name</span>": <span class="name14" title="locally bound name">name</span>})
   }
 }</pre>
-See documentation page <a href="">What's in a name?</a>
+See documentation page <a href="https://picolabs.atlassian.net/wiki/spaces/docs/pages/689897557/What+s+in+a+name">What's in a name?</a>
     </div>
     <div class="pico"><span class="name18" title="pico name">name</span>
       <ul class="horiz-menu">
