--- a/g/nso/index.html
+++ b/g/nso/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
   <head>
     <title>Grad/New Student Orientation</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Grad/New Student Orientation</h1>
+    <section class="hero">
+      <div class="hero-inner">
+        <h1>Pico Labs</h1>
+        <h2>Visit the Pico Labs booth to learn how to keep your things safe!</h2>
+        <a href="#" class="btn">Go ahead...</a>
+      </div>
+    </section>
   </body>
 </html>
