--- a/g/nso/index.html
+++ b/g/nso/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <title>Grad/New Student Orientation</title>
+    <title>Grad/New Student Information</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -10,8 +10,17 @@
       <div class="hero-inner">
         <h1>Pico Labs</h1>
         <h2>Visit the Pico Labs booth to learn how to keep your things safe!</h2>
-        <a href="#" class="btn">Go ahead...</a>
+        <a href="#about" class="btn">Learn more...</a>
       </div>
+    </section>
+    <section id="about">
+    <img src="../../img/pico-labs-stacked.png" alt="Pico Labs Logo"/>
+<p>
+Pico Labs at Brigham Young University creates Internet of Things technology that preserves personal freedom. 
+</p>
+<p>
+Pico Labs is responsible for Picos, an actor-based programming system that supports people-centric, reactive programming on the Internet of Things. 
+</p>
     </section>
   </body>
 </html>
