giving up on CSS

--- a/g/nso/index.html
+++ b/g/nso/index.html
@@ -10,17 +10,11 @@
       <div class="hero-inner">
         <h1>Pico Labs</h1>
         <h2>Visit the Pico Labs booth to learn how to keep your things safe!</h2>
-        <a href="#about" class="btn">Learn more...</a>
+        <a href="#safeandmine" class="btn">Learn more...</a>
       </div>
     </section>
-    <section id="about">
-    <img src="../../img/pico-labs-stacked.png" alt="Pico Labs Logo"/>
-<p>
-Pico Labs at Brigham Young University creates Internet of Things technology that preserves personal freedom. 
-</p>
-<p>
-Pico Labs is responsible for Picos, an actor-based programming system that supports people-centric, reactive programming on the Internet of Things. 
-</p>
+    <section id="safeandmine">
+      <img src="flyer.jpg" alt="Pico Labs flyer"/>
     </section>
   </body>
 </html>
