--- a/g/nso/index.html
+++ b/g/nso/index.html
@@ -4,6 +4,7 @@
     <title>Grad/New Student Information</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="../../img/pico-logo-transparent-48x48.png">
   </head>
   <body>
     <section class="hero">
@@ -14,7 +15,15 @@
       </div>
     </section>
     <section id="safeandmine">
-      <img src="flyer.jpg" alt="Pico Labs flyer"/>
+      <div class="safeandmine-inner">
+        <h1>Safe and Mine</h1>
+        <p>
+        <a href="http://picolabs.io">Pico Labs</a> 
+        presents <em>Safe and Mine</em>,
+        a Manifold application
+        which allows you to keep track of your things.
+        </p>
+      </div>
     </section>
   </body>
 </html>
