--- a/g/nso/index.html
+++ b/g/nso/index.html
@@ -23,6 +23,14 @@
         a Manifold application
         which allows you to keep track of your things.
         </p>
+<h2>How it works</h2>
+<ol>
+<li>Affix a tag to your thing.</li>
+<li>Prepare a message explaining how to contact you.</li>
+<li>Lose your thing (hopefully not, but if you do...)</li>
+<li>When someone finds it and scans the tag, they see your prepared message.</li>
+<li>You arrange with the finder to return your thing.</li>
+</ol>
       </div>
     </section>
   </body>
