--- a/g/nso/index.html
+++ b/g/nso/index.html
@@ -31,7 +31,7 @@
 <li>When someone finds it and scans the tag, they see your prepared message.</li>
 <li>You arrange with the finder to return your thing.</li>
 </ol>
-<h2>Order tags</h2>
+<h2>Get your free tags</h2>
 <p><a href="https://forms.gle/a9tc9kvtgtywao8J7">here</a></p>
       </div>
     </section>
