tweaks and email address

--- a/g/nso/index.html
+++ b/g/nso/index.html
@@ -20,7 +20,7 @@
         <p>
         <a href="http://picolabs.io">Pico Labs</a> 
         presents <em>Safe and Mine</em>,
-        a Manifold application
+        a <a href="https://manifold.picolabs.io/">Manifold</a> application
         which allows you to keep track of your things.
         </p>
 <h2>How it works</h2>
@@ -32,7 +32,9 @@
 <li>You arrange with the finder to return your thing.</li>
 </ol>
 <h2>Get your free tags</h2>
-<p><a href="https://forms.gle/a9tc9kvtgtywao8J7">here</a></p>
+<p><a href="https://forms.gle/a9tc9kvtgtywao8J7">order here</a></p>
+<h2>Questions?</h2>
+<p>contact us at <a href="mailto:PicoLabsBYU@gmail.com?subject=Safe and Mine" target="_blank">PicoLabsBYU@gmail.com</a></p>
       </div>
     </section>
   </body>
