--- a/g/nso/index.html
+++ b/g/nso/index.html
@@ -21,7 +21,7 @@
         <a href="http://picolabs.io">Pico Labs</a> 
         presents <em>Safe and Mine</em>,
         a <a href="https://manifold.picolabs.io/">Manifold</a> application
-        which allows you to keep track of your things.
+        which helps you to manage your things.
         </p>
 <h2>How it works</h2>
 <ol>
